# rust-websys-canvas-playground

./: .gitignore  Cargo.toml  README.md
src/: click_view.rs  lib.rs
static/: index.html
