[package]
name = "rust-websys-canvas-playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "Element",
    "DomRect"
] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.50"
futures-channel = "0.3.31"
